--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ html
         .content
           .information
             form(method="POST", action="/invite")#join-form.form
-              input(type="text", name="email", placeholder="#{__('ENTER_NAME')}")#slack-name.field
+              input(type="text", name="name", placeholder="#{__('ENTER_NAME')}")#slack-name.field
               input(type="text", name="email", placeholder="#{__('ENTER_EMAIL')}")#slack-email.field
               if tokenRequired
                 input(type="text", name="token", placeholder="#{__('ENTER_TOKEN')}")#slack-token.field
